[PEx] code cleanup and refactoring